# Learned-Index-Test-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  analyse.py  run.py
src/benchmark/: benchmark.h  utils.h
src/competitor/: competitor.h  indexInterface.h
src/competitor/alexol/src/: util.h
src/competitor/artsync/src/ART/: N.cpp  N.h  N16.cpp  N256.cpp  N4.cpp  N48.cpp  Tree.cpp  Tree.h
src/competitor/artsync/src/OptimisticLockCoupling/: N.cpp  N.h  N16.cpp  N256.cpp  Tree.cpp  Tree.h
src/competitor/artsync/src/ROWEX/: N.cpp  Tree.cpp  Tree.h
src/competitor/btreeolc/src/BTreeOLC/: BTreeOLC_child_layout.h
src/competitor/fast/: fast.h
src/competitor/fast/src/: fast.h
src/competitor/finedex/src/include/: util.h
src/competitor/finedex/src/osm/include/: util.h
src/competitor/lipp/src/src/core/: lipp.h
src/competitor/lippol/: lippol.h
src/competitor/lippol/src/src/core/: lipp.h
src/competitor/sali/: sali.h
src/competitor/sali/src/src/core/: sali.h
src/competitor/verlib/: verlib_arttree.h  verlib_btree.h
src/competitor/verlib/src/include/flock/: spin_lock.h
src/competitor/verlib/src/include/verlib/: verlib.h
src/competitor/verlib/src/structures/arttree/: ordered_map.h
src/competitor/verlib/src/structures/btree/: ordered_map.h
src/competitor/xindex/: xindex.h
src/competitor/xindex/src/: xindex_util.h
src/ours/: empty_index.h  fh_index_ro_interface.h  fh_index_rw_interface.h  fh_index_utils.h  main.cpp  naive_index_interface.h  run_ro.cpp  run_rw.cpp  test.cpp  utils.h
